# liquidator_indicator

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTORS.md  LICENSE  LIQUIDATION_COLLECTORS_GUIDE.md  LIQUIDATOR_INDICATOR_GUIDE.md  LIQUIDATOR_TRADING_GUIDE.md  LIQUIDATOR_VISUAL_GUIDE.md  MANIFEST.in  NUMBA_OPTIMIZATIONS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.0.3.md  RELEASE_NOTES_v0.0.5.md  RELEASE_NOTES_v0.0.7.md  RELEASE_NOTES_v0.0.8.md  SECURITY.md  TESTING_STATUS.md  VERIFICATION_BADGE.txt  benchmark_performance.py  pyproject.toml  requirements-lock.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml
examples/: binance_liquidations_quick.py  demo.py  ml_prediction_demo.py  multi_exchange_liquidations.py  multi_timeframe_demo.py  plot_zones.py  quality_scoring_demo.py  streaming_mode_demo.py  usage_liquidator.py  visualization_demo.py
src/liquidator_indicator/: __init__.py  core.py  indicators.py  ml_predictor.py  numba_optimized.py  parsers.py
src/liquidator_indicator/collectors/: __init__.py  funding.py  liquidations.py
src/liquidator_indicator/exchanges/: __init__.py  base.py  binance.py  bingx.py  bitfinex.py  bitget.py  bitmex.py  bitstamp.py  bybit.py  coinbase.py  cryptocom.py  deribit.py  gateio.py  gemini.py  htx.py  hyperliquid.py  kraken.py  kucoin.py  mexc.py  okx.py  others.py  phemex.py  poloniex.py
tests/: fix_numpy_compatibility.py  profile_code.py  test_all_timeframes.py  test_backward_compatibility.py  test_core.py  test_exchange_parsers.py  test_indicators_parsers.py  test_integration.py  test_liquidation_backward_compat.py  test_liquidation_collectors_live.py  test_ml_predictor.py  test_multi_timeframe.py  test_numba_performance.py  test_quality_scoring.py  test_streaming_mode.py  test_v0_0_7_compatibility.py  test_v0_0_8_compatibility.py  test_visualization_compatibility.py  test_zones_integration.py
