[project]
name = "liquidator_indicator"
version = "0.0.3"
description = "Lightweight liquidation zone indicator with multi-signal detection and visual chart integration"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
	"pandas==2.3.3",
	"numpy==1.26.4"
]
readme = "README.md"
keywords = ["trading", "liquidation", "zones", "cryptocurrency", "technical-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
