[project]
name = "liquidator_indicator"
version = "0.0.7"
description = "Lightweight liquidation zone indicator with multi-signal detection and visual chart integration"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
	"pandas>=1.3.0",
	"numpy>=1.20.0",
	"numba>=0.56.0; python_version>='3.9'",
	"scikit-learn>=1.0.0"
]
readme = "README.md"
keywords = ["trading", "liquidation", "zones", "cryptocurrency", "technical-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
