[metadata]
name = liquidator_indicator
version = 0.0.3
author = ViWarshawski
author_email = nexus2.0.2026@gmail.com
description = Lightweight liquidation zone indicator with multi-signal detection and visual chart integration
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/ViWarshawski/liquidator_indicator
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas==2.3.3
    numpy==1.26.4

